--- a/BattleJop.ApiService/BattleJop.Api.Web.csproj
+++ b/BattleJop.ApiService/BattleJop.Api.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="9.0.0" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.4.22" />
   </ItemGroup>
