--- a/BattleJop.Api.Application/BattleJop.Api.Application.csproj
+++ b/BattleJop.Api.Application/BattleJop.Api.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BattleJop.Api.Core\BattleJop.Api.Core.csproj" />
     <ProjectReference Include="..\BattleJop.Api.Infrastructure\BattleJop.Api.Infrastructure.csproj" />
   </ItemGroup>
 
