Add start tournament

--- a/Api/BattleJop.Api.Domain/BattleJop.Api.Domain.csproj
+++ b/Api/BattleJop.Api.Domain/BattleJop.Api.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BattleJop.Api.Core\BattleJop.Api.Core.csproj" />
+  </ItemGroup>
+
 </Project>
